add list job applications for user API (#115)
