# docs/swagger.json
@@ -478,6 +478,74 @@
                 }
             }
         },
+        "/job-applications/user": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "List job applications. Only users can access this endpoint. Returns a list of job applications that authenticated user created. Results are paginated based on page and page_size query parameters.",
+                "tags": [
+                    "job applications"
+                ],
+                "summary": "List job applications (user)",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "page number",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page size",
+                        "name": "page_size",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "sort by date ('date-asc' or 'date-desc')",
+                        "name": "sort",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "filter by status ('Applied', 'Seen', 'Interviewing', 'Offered', 'Rejected')",
+                        "name": "status",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/db.ListJobApplicationsForUserParams"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid query parameters",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized. Only users can access, not employers.",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Any other error",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/job-applications/user/{id}": {
             "get": {
                 "security": [
@@ -2031,6 +2099,32 @@
                 "ApplicationStatusOffered",
                 "ApplicationStatusRejected"
             ]
+        },
+        "db.ListJobApplicationsForUserParams": {
+            "type": "object",
+            "properties": {
+                "applied_at_asc": {
+                    "type": "boolean"
+                },
+                "applied_at_desc": {
+                    "type": "boolean"
+                },
+                "filter_status": {
+                    "type": "boolean"
+                },
+                "limit": {
+                    "type": "integer"
+                },
+                "offset": {
+                    "type": "integer"
+                },
+                "status": {
+                    "$ref": "#/definitions/db.ApplicationStatus"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
         },
         "db.ListJobSkillsByJobIDRow": {
             "type": "object",
